@@ -889,6 +889,10 @@
         name = "Stéphane Gimenez (gim)"
     [/entry]
     [entry]
+        name = "sylecn"
+        email = "sylecn_AT_gmail.com"
+    [/entry]
+    [entry]
         name = "Thomas Prevost (zancdar)"
         email = "thomas.prevost_AT_gmail.com"
     [/entry]
@@ -1064,6 +1068,7 @@
     [/entry]
     [entry]
         name = "sylecn"
+        email = "sylecn_AT_gmail.com"
     [/entry]
     [entry]
         name = "Teamzhangmeng"
